# serializer version: 1
# name: test_player_parsing
  Player(
    apps=list([
      dict({
        'meta': dict({
          'applicationId': '0100152000022000',
          'hasUgc': False,
          'imageUri': dict({
            'extraLarge': 'https://atum-img-lp1.cdn.nintendo.net/i/c/fd75c85d0465407cba8249e93c21e831_1024',
            'extraSmall': 'https://atum-img-lp1.cdn.nintendo.net/i/c/fd75c85d0465407cba8249e93c21e831_3',
            'large': 'https://atum-img-lp1.cdn.nintendo.net/i/c/fd75c85d0465407cba8249e93c21e831_512',
            'medium': 'https://atum-img-lp1.cdn.nintendo.net/i/c/fd75c85d0465407cba8249e93c21e831_256',
            'small': 'https://atum-img-lp1.cdn.nintendo.net/i/c/fd75c85d0465407cba8249e93c21e831_128',
          }),
          'shopUri': 'https://ec.nintendo.com/apps/0100152000022000/GB?lang=en-GB',
          'title': 'five',
        }),
        'playingTime': 15,
      }),
    ]),
    month_summary=dict({
    }),
    nickname='cheyenne19',
    player_id='B276150DE6B18218C09E4D0CE4CFA0861A3',
    player_image='https://placekitten.com/861/237',
    playing_time=15,
  )
# ---
# name: test_player_update_from_daily_summary
  Player(
    apps=list([
      dict({
        'app': 'new_app',
      }),
    ]),
    month_summary=dict({
    }),
    nickname='cheyenne19',
    player_id='B276150DE6B18218C09E4D0CE4CFA0861A3',
    player_image='https://placekitten.com/861/237',
    playing_time=54321,
  )
# ---
